[package]
name = "fluss"
version = "0.1.0"
authors = ["github@dav1d.de"]
edition = "2018"

[dependencies]
nom = "6"
nom-derive = "0.9.0"

tokio = { version = "1", features = ["full"] }

tracing-futures = { version = "0.2", features = ["std-future", "futures-03"] }
tracing-subscriber = "0.2"
tracing = "0.1"

parking_lot = "0.11"
macaddr = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "1"

elasticsearch = "7.12.0-alpha.1"
chrono = "0.4"

clap = "2"
anyhow = "1"

